Added dependency for file

--- a/CodeGenUtility/src/main/resources/static/index.html
+++ b/CodeGenUtility/src/main/resources/static/index.html
@@ -13,6 +13,7 @@
 
   <script src="js/angular.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/ng-pattern-restrict.js"></script>
   <script src="js/angular-route.js"></script>
   <script src="js/route.js"></script>
   <script src="lib/dirPagination.js"></script>
